# NTUEECamp_2024_Gameconsole

./: .gitignore  README.md
Connection/: README.md
Connection/communication/: README.md
Connection/communication/main/: CMakeLists.txt  main.c
Connection/connection/: CMakeLists.txt  README.md  sdkconfig
Connection/connection/main/: CMakeLists.txt  main.c
Game/: README.md
Game/engine/: CMakeLists.txt  README.md
Game/engine/include/: Audio.h  Engine.h  Render.h  RenderManager.h  Resource.h  ResourceManager.h
Game/engine/src/: Engine.c  Render.c  RenderManager.c
Game/kb_joystick_in_engine/main/: main.c
Game/sample_code/game_test/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
Game/sample_code/game_test/components/bullet/: CMakeLists.txt
Game/sample_code/game_test/components/bullet/include/: Bullet.h
Game/sample_code/game_test/components/bullet/src/: Bullet.c
Game/sample_code/game_test/components/engine/: CMakeLists.txt  README.md
Game/sample_code/game_test/components/engine/include/: Engine.h  Joystick.h  Render.h  Resource.h
Game/sample_code/game_test/components/engine/src/: Audio.c  Engine.c  Render.c  Resource.c
Game/sample_code/game_test/components/game/: CMakeLists.txt
Game/sample_code/game_test/components/game/include/: Game.h
Game/sample_code/game_test/components/game/src/: Game.c
Game/sample_code/game_test/components/person/: CMakeLists.txt
Game/sample_code/game_test/components/person/include/: Person.h
Game/sample_code/game_test/components/person/src/: Person.c
Game/sample_code/game_test/components/weapon/: CMakeLists.txt
Game/sample_code/game_test/components/weapon/include/: Weapon.h
Game/sample_code/game_test/components/weapon/src/: Weapon.c
Game/sample_code/render_test/: CMakeLists.txt  sdkconfig
Game/unit_test/lcd/: sdkconfig
Keyboard/: README.md
Main/: README.md
Main/joystick/: CMakeLists.txt  build.sh
Main/joystick_revised/: CMakeLists.txt
Screen/: README.md
Speaker/: README.md
Speaker/Loop_Test/: sdkconfig.old
Speaker/Speaker_Test/: CMakeLists.txt  sdkconfig
Speaker/component/: CMakeLists.txt
(+106 files in other folders)
